examples/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 8000
